attempt at debugging